# sciqis_project

./: README.md  main.py  pyproject.toml  random_circuits.ipynb
utils/: circuit.py  circuit_metrics.py  draw_circuit.py  gates.py  noise_channels.py  plots.py  random_circuits.py  random_gates.py  states.py
