[project]
name = "sciqis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pylatexenc>=2.10",
    "qiskit>=2.1.2",
    "scipy>=1.15.3",
]
